--- a/src/pages/filters.mdx
+++ b/src/pages/filters.mdx
@@ -26,7 +26,7 @@ Bővebb információért lásd az alábbi táblázat utolsó sorát.
 
 ## Szűrőlisták táblázata
 
-|                                    | [hufilter.txt](https://subscribe.adblockplus.org/?location=https://raw.githubusercontent.com/hufilter/hufilter/master/hufilter.txt&title=Hufilter%20Basic) | [hufilter-abp.txt](https://subscribe.adblockplus.org/?location=https://raw.githubusercontent.com/hufilter/hufilter/master/hufilter-abp.txt&title=Hufilter%20for%20ABP) | [hufilter-ublock.txt](https://subscribe.adblockplus.org/?location=https://raw.githubusercontent.com/hufilter/hufilter/master/hufilter-ublock.txt&title=Hufilter%20for%20uBO) | [hufilter-adguard.txt](https://subscribe.adblockplus.org/?location=https://raw.githubusercontent.com/hufilter/hufilter/master/hufilter-adguard.txt&title=Hufilter%20for%20AdGuard) | [hufilter-selfpromo.txt](https://subscribe.adblockplus.org/?location=https://raw.githubusercontent.com/hufilter/hufilter/master/hufilter-selfpromo.txt&title=Hufilter%20Self-promotions) | [hufilter-dns.txt](https://raw.githubusercontent.com/hufilter/hufilter/master/hufilter-dns.txt) | [hufilter-pihole.txt](https://raw.githubusercontent.com/hufilter/hufilter/master/hufilter-pihole.txt) |
+|                                    | [hufilter.txt](https://subscribe.adblockplus.org/?location=https://cdn.jsdelivr.net/gh/hufilter/hufilter@gh-pages/hufilter.txt&title=Hufilter%20Basic) | [hufilter-abp.txt](https://subscribe.adblockplus.org/?location=https://cdn.jsdelivr.net/gh/hufilter/hufilter@gh-pages/hufilter-abp.txt&title=Hufilter%20for%20ABP) | [hufilter-ublock.txt](https://subscribe.adblockplus.org/?location=https://cdn.jsdelivr.net/gh/hufilter/hufilter@gh-pages/hufilter-ublock.txt&title=Hufilter%20for%20uBO) | [hufilter-adguard.txt](https://subscribe.adblockplus.org/?location=https://cdn.jsdelivr.net/gh/hufilter/hufilter@gh-pages/hufilter-adguard.txt&title=Hufilter%20for%20AdGuard) | [hufilter-selfpromo.txt](https://subscribe.adblockplus.org/?location=https://cdn.jsdelivr.net/gh/hufilter/hufilter@gh-pages/hufilter-selfpromo.txt&title=Hufilter%20Self-promotions) | [hufilter-dns.txt](https://cdn.jsdelivr.net/gh/hufilter/hufilter@gh-pages/hufilter-dns.txt) | [hufilter-hosts.txt](https://cdn.jsdelivr.net/gh/hufilter/hufilter@gh-pages/hufilter-hosts.txt) |
 | ---------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------: | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------: | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------: | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------: | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------: | :---------------------------------------------------------------------------------------------: | :---------------------------------------------------------------------------------------------------: |
 | Hirdetések blokkolása | ✔️ | ✔️ | ✔️ | ✔️ | | 🟡 | 🟡 |
 | Nyomkövetők blokkolása | | ✔️ | ✔️ | ✔️ | | 🟡 | 🟡 |
@@ -35,7 +35,7 @@ Bővebb információért lásd az alábbi táblázat utolsó sorát.
 | Fejlett szabályok | | 🟡 | ✔️ | ✔️ | | | |
 | Önpromóció blokkolása | | | | | ✔️ | | |
 | DNS szűrés | | | | | | ✔️ | ✔️ |
-| Kompatibilis vele[^1] | <AdblockPlusLogo /> <AdBlockLogo /> <AdGuardLogo /> <UBlockOriginLogo /> <BraveLogo /> <AdBlockUltimateLogo /> | <AdblockPlusLogo /> <AdBlockLogo /> <AdGuardLogo /> <UBlockOriginLogo /> <BraveLogo /> <AdBlockUltimateLogo /> | <UBlockOriginLogo /> <BraveLogo /> | <AdGuardLogo /> <AdBlockUltimateLogo /> | <AdblockPlusLogo /> <AdBlockLogo /> <AdGuardLogo /> <UBlockOriginLogo /> <BraveLogo /> <AdBlockUltimateLogo /> | <AdGuardHomeLogo /> <RethinkDNSLogo /> | <PiHoleLogo /> |
+| Kompatibilis vele[^1] | <AdblockPlusLogo /> <AdBlockLogo /> <AdGuardLogo /> <UBlockOriginLogo /> <BraveLogo /> <AdBlockUltimateLogo /> | <AdblockPlusLogo /> <AdBlockLogo /> <AdGuardLogo /> <UBlockOriginLogo /> <BraveLogo /> <AdBlockUltimateLogo /> | <UBlockOriginLogo /> <BraveLogo /> | <AdGuardLogo /> <AdBlockUltimateLogo /> | <AdblockPlusLogo /> <AdBlockLogo /> <AdGuardLogo /> <UBlockOriginLogo /> <BraveLogo /> <AdBlockUltimateLogo /> | <AdGuardHomeLogo /> <RethinkDNSLogo /> | <AdGuardHomeLogo /> <PiHoleLogo /> |
 | Beépítetten tartalmazza[^2] | <AdblockPlusLogo /> <AdBlockLogo /> | | <UBlockOriginLogo /> <BraveLogo /> | <AdGuardLogo /> <AdBlockUltimateLogo /> | | <AdGuardHomeLogo /> <RethinkDNSLogo /> | |
 
 **Jelmagyarázat:**
