Add note about filter list URLs

--- a/src/pages/filters.mdx
+++ b/src/pages/filters.mdx
@@ -45,5 +45,14 @@ Bővebb információért lásd az alábbi táblázat utolsó sorát.
   <li>✔️ Támogatott</li>
 </ul>
 
+## Szűrőlisták elérhetősége
+
+A szűrőlisták elérhetőek a következő linkeken:
+
+- `https://cdn.jsdelivr.net/gh/hufilter/hufilter@gh-pages/<fájlnév>`, pl. https://cdn.jsdelivr.net/gh/hufilter/hufilter@gh-pages/hufilter.txt
+- `https://filters.hufilter.hu/<fájlnév>`, pl. https://filters.hufilter.hu/hufilter.txt
+
+(Ezek a linkek ugyanazt a tartalmat szolgálják ki.)
+
 [^1]: A megjelölt reklámblokkolók kompatibilisek az adott szűrőlistával.
 [^2]: A megjelölt reklámblokkolók beépítetten tartalmazzák az adott szűrőlistát.
